# Firestar-Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Firestar Editor/: CMakeLists.txt
Firestar Editor/src/: main.cpp
Firestar Engine/: CMakeLists.txt
Firestar Engine/include/: FirestarEngine.h
Firestar Engine/include/DataTypes/: Colour.h  GameInfo.h  Throw.h
Firestar Engine/include/DataTypes/Math/: Quaternion.h  Transform.h  Vector.h  Vector2.h  Vector3.h
Firestar Engine/include/DataTypes/Objects/: Material.h  Mesh.h  Texture.h
Firestar Engine/include/Debug/: Debug.h
Firestar Engine/include/FileSystem/: FileHandler.h
Firestar Engine/include/FileSystem/Composite Save System/: CompositeSave.h  IComposite.h
Firestar Engine/include/FileSystem/Composite Save System/Composite/: CChar.h  CInt.h  CQuaternion.h  CString.h  CVector2.h  CVector3.h  Cfloat.h
Firestar Engine/include/FileSystem/Object Extention/: FSExtention.h  FSImage.h
Firestar Engine/include/Object System/: Component.h  ECSystem.h  Entity.h  Object.h
Firestar Engine/include/Object System/Components/: IComponents.h  MeshComponent.h  TransformComponent.h
Firestar Engine/include/Renderer/: IRenderer.h  RenderFactory.h
Firestar Engine/include/Renderer/OpenGl/: OpenGlRenderer.h
Firestar Engine/include/Renderer/Vulkan/: VulkanRenderer.h
Firestar Engine/include/Renderer/Vulkan/Utils/: VulkanUtils.h
Firestar Engine/include/Shaders/: Shader.h
Firestar Engine/include/Slate/: Slate.h
Firestar Engine/include/Window/: Window.h
Firestar Engine/src/: FirestarEngine.cpp
Firestar Engine/src/DataTypes/: Colour.cpp  GameInfo.cpp  Throw.cpp
Firestar Engine/src/DataTypes/Math/: Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp
Firestar Engine/src/Debug/: Debug.cpp
Firestar Engine/src/FileSystem/: FileHandler.cpp
Firestar Engine/src/FileSystem/Composite Save System/: CompositeSave.cpp
Firestar Engine/src/FileSystem/Composite Save System/Composite/: CVector3.cpp
Firestar Engine/src/FileSystem/Object Extention/: FSImage.cpp
Firestar Engine/src/Object System/: ECSystem.cpp  Entity.cpp
Firestar Engine/src/Object System/Components/: TransformComponent.cpp
Firestar Engine/src/Renderer/: RenderFactory.cpp
Firestar Engine/src/Renderer/OpenGl/: OpenGlRenderer.cpp
Firestar Engine/src/Renderer/Vulkan/: VulkanRenderer.cpp
Firestar Engine/src/Renderer/Vulkan/Utils/: VulkanUtils.cpp
Firestar Engine/src/Slate/: Slate.cpp
Firestar Engine/src/Window/: Window.cpp
